--- a/Episodicos_Precentacion/src/main/webapp/UserProfile/Style.css
+++ b/Episodicos_Precentacion/src/main/webapp/UserProfile/Style.css
@@ -28,28 +28,6 @@ body {
 header {
     grid-column-start: 1;
     grid-column-end: 3;
-    color: white;
-    border-radius: 10px;
-    padding-bottom: 1cm;
-    width: 100%;
-    overflow: hidden;
-
-}
-
-body {
-    font-family: Arial, sans-serif;
-    background: linear-gradient(to right, #8c00ff, #00c6ff);
-}
-
-.Feed {
-    background-color: #222;
-    margin: 10px 50vh;
-
-    padding: 20px;
-    border-radius: 10px;
-}
-
-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -59,13 +37,11 @@ header {
     height: 4vh;
     border-radius: 10px;
     padding-bottom: 1cm;
-    width: 95.7%;
+    width: 94%;
 }
-
 
 nav {
     display: flex;
-    height: 60px;
     border-radius: 40px;
     align-items: center;
     justify-content: center;
@@ -77,18 +53,65 @@ nav {
 }
 
 .ul {
-    width: 100%;
+    width: 90%;
     background-color: transparent;
     display: flex;
     justify-content: space-between;
-    margin-top: 5px;
+    margin-top: 10px;
 }
 
 .ul .li {
     display: inline-block
 }
 
-button {
+.ul {
+    align-items: center;
+    background-image: linear-gradient(144deg, #00DDEB, #5B42F3 50%, #AF40FF );
+    border: 0;
+    border-radius: 5px;
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    display: flex;
+    font-family: Phantomsans, sans-serif;
+    font-size: 20px;
+    justify-content: center;
+    line-height: 1em;
+    padding: 3px;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    cursor: pointer;
+    height: 80px;
+}
+
+.ul active,
+.ul:hover {
+    outline: 0;
+}
+
+.ul span {
+    background-color: rgb(5, 6, 45);
+    padding: 16px 24px;
+    border-radius: 6px;
+    height: 100%;
+    transition: 300ms;
+}
+
+.ul:hover span {
+    background: none;
+}
+
+@media (min-width: 0) {
+    .ul {
+        font-size: 24px;
+        min-width: 160px;
+    }
+}
+
+.ul {
     border: none;
 }
 
@@ -108,6 +131,9 @@ button {
 button:hover {
     opacity: 100%;
 }
+button{
+    border: none;
+}
 
 .li:hover {
     transition: 0.1s;
@@ -120,7 +146,6 @@ button:hover {
     color: #00c6ff;
     fill-rule: evenodd;
 }
-
 
 .seccion,
 .resenas-recientes {
@@ -317,11 +342,6 @@ h2 {
     grid-column-end: 3;
     display: flex;
     overflow-x: scroll;
-}
-
-h2 {
-    color: white;
-    margin-bottom: 10px;
 }
 
 .contenedor-series {
