--- a/Episodicos_Precentacion/src/main/webapp/UserProfile/StyleUserProfile.css
+++ b/Episodicos_Precentacion/src/main/webapp/UserProfile/StyleUserProfile.css
@@ -15,7 +15,7 @@ body {
 .Feed {
     display: grid;
     grid-template-columns: 70% 30%;
-    grid-template-rows: 100px 250px 48px 210px 48px 300px 60px 300px;
+    grid-template-rows: 100px 300px 48px 300px 60px 340px;
     background-color: #222;
     margin: 0px 50vh;
     overflow: hidden;
@@ -146,139 +146,6 @@ button{
     color: #00c6ff;
     fill-rule: evenodd;
 }
-
-.seccion,
-.resenas-recientes {
-
-    padding: 20px;
-    border-radius: 10px;
-    white-space: nowrap;
-    box-shadow: inset 0 0 20px #ffffff42;
-}
-
-.seccion {
-
-    display: flex;
-    overflow-x: scroll;
-}
-
-.resenas-recientes {
-    display: flex;
-    flex-direction: column;
-    overflow-y: scroll;
-    height: 230px;
-}
-
-
-h2 {
-    color: white;
-    margin-bottom: 10px;
-}
-/* scroll a un lado */
-.contenedor-series {
-    display: flex;
-    gap: 10px;
-}
-
-.serie {
-    background-color: #f0f0f0;
-    width: 100px;
-    height: 150px;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-.serie .info {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    font-size: 14px;
-    color: rgb(255, 255, 255);
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    z-index: 2;
-}
-
-.serie-img {
-
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: filter 0.3s ease;
-}
-
-
-.serie:hover .serie-img {
-    filter: blur(3px);
-}
-
-.serie:hover .info {
-    opacity: 1;
-}
-
-/* scroll hacia a un lado*/
-.resena {
-
-    display: grid;
-    grid-template-columns: 80% 10% 10%;
-    grid-template-rows: 20% 80%;
-    background-color: rgb(214, 212, 212);
-    border-radius: 10px;
-    padding: 15px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    width: 95%;
-    flex: 1;
-    margin-bottom: 15px;
-}
-
-
-.titulo-resena {
-    grid-column-start: 1;
-    grid-column-end: 4;
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    width: 100%;
-}
-
-
-.texto-resena {
-    padding-right: 15px;
-    margin-right: 15px;
-    margin-left: 10px;
-    text-align: justify;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-    white-space: normal;
-    overflow-y: scroll;
-
-}
-
-
-.imagen-resena {
-
-    grid-column-start: 2;
-    grid-column-end: 4;
-    flex: 3;
-    display: flex;
-    font-size: 12px;
-    color: #555;
-    width: 100px;
-    height: 150px;
-    border-radius: 10px;
-    margin-left: 6px;
-    overflow: hidden;
-    border-radius: 15px;
-}
-
-
 /* perfil */
 .perfil {
     padding: 20px;
@@ -332,7 +199,6 @@ h2 {
 
 /* secciones */
 .seccion {
-
     margin: 0;
     margin-top: 0px;
     padding: 20px;
@@ -342,6 +208,11 @@ h2 {
     grid-column-end: 3;
     display: flex;
     overflow-x: scroll;
+}
+
+h2 {
+    color: white;
+    margin-bottom: 10px;
 }
 
 .contenedor-series {
@@ -376,7 +247,6 @@ h2 {
 }
 
 .serie-img {
-
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -391,11 +261,10 @@ h2 {
     opacity: 1;
 }
 
-/*Escribir una reseña*/
+/* reseña */
 .nueva-resena {
-    grid-row-start: 6;
-    grid-row-end: 7;
-
+    grid-row-start: 4;
+    grid-row-end: 5;
 }
 
 .form {
@@ -436,6 +305,10 @@ h2 {
     border: 1px solid #8c00ff;
 }
 
+button {
+    border: none;
+}
+
 .form button {
     align-self: flex-end;
     padding: 8px;
@@ -449,22 +322,19 @@ h2 {
     cursor: pointer;
 }
 
-.aceptar:hover {
-    background: #8c00ff;
-}
 
-/*peliculas favoritas*/
+/* favoritas */
 .favoritas {
-    grid-row-start: 6;
+    grid-row-start: 4;
     grid-row-end: 9;
     margin: 0;
     padding: 45px;
     border-radius: 10px;
-    white-space: normal;
+    white-space: normal; 
     display: flex;
-    flex-direction: column;
-    overflow-y: scroll;
-    gap: 10px;
+    flex-direction: column; 
+    overflow-y: scroll; 
+    gap: 10px; 
 }
 
 .contenedor-series-fav {
@@ -477,16 +347,16 @@ h2 {
     text-align: center;
 }
 
-/*reseñas recientes*/
+/* Recent Reviews */
 .resenas-recientes {
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
     height: 100%;
+
 }
 
 .resena {
-
     display: grid;
     grid-template-columns: 70% 15% 15%;
     grid-template-rows: 10% 90%;
@@ -495,20 +365,35 @@ h2 {
     padding: 15px;
     width: 93%;
     flex: 1;
+    margin-top: 20px;
     margin-bottom: 15px;
 }
 
 .titulo-resena {
+    display: grid;
+    grid-template-columns: 50% 50%;
     grid-column-start: 1;
     grid-column-end: 4;
     font-size: 16px;
     font-weight: bold;
-    margin-bottom: 10px;
     width: 100%;
 }
 
+.tipo, .nombre, .titulo{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    color: #222;
+}
+
+.fecha{
+
+    grid-column-start: 2;
+    grid-column-end: 3;
+    color: #222;
+}
 
 .texto-resena {
+    margin-top: 90px;
     padding-right: 15px;
     margin-right: 15px;
     margin-left: 10px;
@@ -516,8 +401,20 @@ h2 {
     word-wrap: break-word;
     overflow-wrap: break-word;
     white-space: normal;
-    overflow-y: scroll;
+    overflow-y: auto;
 
+}
+
+.texto-resena2{
+    margin-top: 110px;
+    padding-right: 15px;
+    margin-right: 15px;
+    margin-left: 10px;
+    text-align: justify;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+    overflow-y: auto;
 }
 
 .imagen-resena {
@@ -529,9 +426,51 @@ h2 {
     font-size: 12px;
     color: #555;
     width: 100px;
-    height: 150px;
     border-radius: 10px;
     margin-left: 6px;
     overflow: hidden;
     border-radius: 15px;
+    margin-top: 120px;
 }
+
+.comentar{
+
+    width: 120px;
+    height: 40px;
+    margin-top: 30px;
+    border-radius: 20pc;
+    background-color: goldenrod;
+    color: #222;
+    font-weight: 700;
+}
+
+.comentar:hover{
+
+    background-color: rgb(184, 43, 43);
+    color: #ffffff;
+}
+
+.comentar2{
+
+    margin-top: 600px;
+    width: 120px;
+    height: 40px;
+    margin-top: 70px;
+    border-radius: 20pc;
+    background-color: goldenrod;
+    color: #222;
+    font-weight: 700;
+}
+
+.comentar2:hover{
+
+    background-color: rgb(184, 43, 43);
+    color: #ffffff;
+}
+
+.id{
+    background-color: rgb(214, 212, 212);
+    border: none;
+    color: rgb(214, 212, 212);
+}
+
