--- a/Episodicos_Precentacion/src/main/webapp/Series/StyleSeriesProfile.css
+++ b/Episodicos_Precentacion/src/main/webapp/Series/StyleSeriesProfile.css
@@ -1,4 +1,12 @@
-/* General */
+/*
+Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
+Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css to edit this template
+*/
+/* 
+    Created on : 28 oct 2024, 11:59:23 p.m.
+    Author     : favel
+*/
+
 body {
     font-family: Arial, sans-serif;
     background: linear-gradient(to right, #8c00ff, #00c6ff);
@@ -7,7 +15,7 @@ body {
 .Feed {
     display: grid;
     grid-template-columns: 70% 30%;
-    grid-template-rows: 100px 300px 48px 300px 60px 300px;
+    grid-template-rows: 100px 300px 48px 300px 60px 340px;
     background-color: #222;
     margin: 0px 50vh;
     overflow: hidden;
@@ -16,7 +24,7 @@ body {
     height: auto;
 }
 
-/* barra de navegacion */
+/* barra de navegación*/
 header {
     grid-column-start: 1;
     grid-column-end: 3;
@@ -29,7 +37,7 @@ header {
     height: 4vh;
     border-radius: 10px;
     padding-bottom: 1cm;
-    width: 90%;
+    width: 94%;
 }
 
 nav {
@@ -123,6 +131,9 @@ nav {
 button:hover {
     opacity: 100%;
 }
+button{
+    border: none;
+}
 
 .li:hover {
     transition: 0.1s;
@@ -135,7 +146,6 @@ button:hover {
     color: #00c6ff;
     fill-rule: evenodd;
 }
-
 /* perfil */
 .perfil {
     padding: 20px;
@@ -144,31 +154,37 @@ button:hover {
     grid-column-end: 3;
     overflow: hidden;
     display: grid;
-    grid-template-columns: 30% 70%;
+    grid-template-columns: 20% 80%;
     grid-template-rows: 20% 80%;
 }
 
 .NombrePerfil {
+    grid-column-start: 2;
     margin-bottom: 20px;
     color: #ffffff;
     padding-bottom: 15px;
 }
 
 .foto-perfil {
+    grid-column-start: 1;
+    grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 3;
-    width: 200px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
+    background-color: #222;
+    border-radius: 50%;
     margin-right: 20px;
 }
 
 .serie-img-perfil {
-    margin-top: 20px;
     width: 150px;
     height: 250px;
     object-fit: cover;
     transition: filter 0.3s ease;
-    border-radius: 15px;
+    border-radius: 10%;
+    background-color: #222;
+    
 }
 
 .descripcion {
@@ -178,6 +194,9 @@ button:hover {
     overflow-wrap: break-word;
     white-space: normal;
     overflow-y: scroll;
+
+    grid-column-start: 2;
+    grid-column-end: 4;
 }
 
 /* secciones */
@@ -336,6 +355,7 @@ button {
     flex-direction: column;
     overflow-y: scroll;
     height: 100%;
+
 }
 
 .resena {
@@ -347,19 +367,35 @@ button {
     padding: 15px;
     width: 93%;
     flex: 1;
+    margin-top: 20px;
     margin-bottom: 15px;
 }
 
 .titulo-resena {
+    display: grid;
+    grid-template-columns: 50% 50%;
     grid-column-start: 1;
     grid-column-end: 4;
     font-size: 16px;
     font-weight: bold;
-    margin-bottom: 10px;
     width: 100%;
 }
 
+.tipo, .nombre, .titulo{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    color: #222;
+}
+
+.fecha{
+
+    grid-column-start: 2;
+    grid-column-end: 3;
+    color: #222;
+}
+
 .texto-resena {
+    margin-top: 90px;
     padding-right: 15px;
     margin-right: 15px;
     margin-left: 10px;
@@ -367,10 +403,24 @@ button {
     word-wrap: break-word;
     overflow-wrap: break-word;
     white-space: normal;
-    overflow-y: scroll;
+    overflow-y: auto;
+
+}
+
+.texto-resena2{
+    margin-top: 110px;
+    padding-right: 15px;
+    margin-right: 15px;
+    margin-left: 10px;
+    text-align: justify;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+    overflow-y: auto;
 }
 
 .imagen-resena {
+
     grid-column-start: 2;
     grid-column-end: 4;
     flex: 3;
@@ -378,9 +428,51 @@ button {
     font-size: 12px;
     color: #555;
     width: 100px;
-    height: 150px;
     border-radius: 10px;
     margin-left: 6px;
     overflow: hidden;
     border-radius: 15px;
+    margin-top: 120px;
 }
+
+.comentar{
+
+    width: 120px;
+    height: 40px;
+    margin-top: 30px;
+    border-radius: 20pc;
+    background-color: goldenrod;
+    color: #222;
+    font-weight: 700;
+}
+
+.comentar:hover{
+
+    background-color: rgb(184, 43, 43);
+    color: #ffffff;
+}
+
+.comentar2{
+
+    margin-top: 600px;
+    width: 120px;
+    height: 40px;
+    margin-top: 70px;
+    border-radius: 20pc;
+    background-color: goldenrod;
+    color: #222;
+    font-weight: 700;
+}
+
+.comentar2:hover{
+
+    background-color: rgb(184, 43, 43);
+    color: #ffffff;
+}
+
+.id{
+    background-color: rgb(214, 212, 212);
+    border: none;
+    color: rgb(214, 212, 212);
+}
+
