--- a/Episodicos_Precentacion/src/main/webapp/Post/Style.css
+++ b/Episodicos_Precentacion/src/main/webapp/Post/Style.css
@@ -170,13 +170,12 @@ form {
 
     display: grid;
     grid-template-columns: 80% 10% 10%;
-    grid-template-rows: 20% 80%;
     background-color: rgb(214, 212, 212);
     border-radius: 10px;
     padding: 15px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     width: 95%;
-    height: 400px;
+    height: 75%;
     flex: 1;
     margin-top: 15px;
     overflow: hidden;
@@ -209,7 +208,6 @@ form {
 }
 
 .texto-resena {
-    margin-top: 90px;
     padding-right: 15px;
     margin-right: 15px;
     margin-left: 10px;
@@ -218,11 +216,10 @@ form {
     overflow-wrap: break-word;
     white-space: normal;
     overflow-y: auto;
-
+    height: 100%;
 }
 
 .texto-resena2 {
-    margin-top: 40px;
     padding-right: 15px;
     margin-right: 15px;
     margin-left: 10px;
@@ -231,6 +228,8 @@ form {
     overflow-wrap: break-word;
     white-space: normal;
     overflow-y: auto;
+    height: 100%;
+
 }
 
 .imagen-resena {
@@ -297,4 +296,55 @@ form {
 .comentarioDecomentario {
     width: 70%;
     margin-left: 25%;
+}
+
+.form {
+    
+    grid-column-start: 1;
+    grid-column-end: 3;
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.form .titulo {
+    color: #171718;
+    font-size: 22px;
+    font-weight: 600;
+    line-height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.form input {
+    border: 1px solid goldenrod;
+    padding: 8px 14px;
+    border-radius: 8px;
+    width: 80%;
+}
+
+.form textarea {
+    border-radius: 8px;
+    width: 80%;
+    resize: none;
+    outline: 0;
+    border: 1px solid goldenrod;
+}
+
+button {
+    border: none;
+}
+
+.form button {
+    align-self: flex-end;
+    padding: 8px;
+    outline: 0;
+    border: 0;
+    cursor: pointer;
 }
