--- a/Episodicos_Precentacion/src/main/webapp/SeriesProfile/Style.css
+++ b/Episodicos_Precentacion/src/main/webapp/SeriesProfile/Style.css
@@ -1,12 +1,4 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css to edit this template
-*/
-/* 
-    Created on : 28 oct 2024, 11:59:23 p.m.
-    Author     : favel
-*/
-
+/* General */
 body {
     font-family: Arial, sans-serif;
     background: linear-gradient(to right, #8c00ff, #00c6ff);
@@ -15,7 +7,7 @@ body {
 .Feed {
     display: grid;
     grid-template-columns: 70% 30%;
-    grid-template-rows: 100px 300px 48px 300px 60px 340px;
+    grid-template-rows: 100px 300px 48px 300px 60px 300px;
     background-color: #222;
     margin: 0px 50vh;
     overflow: hidden;
@@ -24,7 +16,7 @@ body {
     height: auto;
 }
 
-/* barra de navegación*/
+/* barra de navegacion */
 header {
     grid-column-start: 1;
     grid-column-end: 3;
@@ -37,7 +29,7 @@ header {
     height: 4vh;
     border-radius: 10px;
     padding-bottom: 1cm;
-    width: 94%;
+    width: 90%;
 }
 
 nav {
@@ -131,9 +123,6 @@ nav {
 button:hover {
     opacity: 100%;
 }
-button{
-    border: none;
-}
 
 .li:hover {
     transition: 0.1s;
@@ -146,6 +135,7 @@ button{
     color: #00c6ff;
     fill-rule: evenodd;
 }
+
 /* perfil */
 .perfil {
     padding: 20px;
@@ -154,7 +144,7 @@ button{
     grid-column-end: 3;
     overflow: hidden;
     display: grid;
-    grid-template-columns: 20% 80%;
+    grid-template-columns: 30% 70%;
     grid-template-rows: 20% 80%;
 }
 
@@ -167,25 +157,18 @@ button{
 .foto-perfil {
     grid-row-start: 1;
     grid-row-end: 3;
-    width: 100px;
-    height: 100px;
-    background-color: #222;
-    border-radius: 50%;
+    width: 200px;
+    height: 150px;
     margin-right: 20px;
 }
 
 .serie-img-perfil {
-    width: 100px;
-    height: 100px;
+    margin-top: 20px;
+    width: 150px;
+    height: 250px;
     object-fit: cover;
     transition: filter 0.3s ease;
-    border-radius: 50%;
-    background-color: #222;
-
-}
-
-.serie-img-perfil:hover {
-    filter: blur(3px);
+    border-radius: 15px;
 }
 
 .descripcion {
@@ -330,11 +313,11 @@ button {
     margin: 0;
     padding: 45px;
     border-radius: 10px;
-    white-space: normal;
+    white-space: normal; 
     display: flex;
-    flex-direction: column;
-    overflow-y: scroll;
-    gap: 10px;
+    flex-direction: column; 
+    overflow-y: scroll; 
+    gap: 10px; 
 }
 
 .contenedor-series-fav {
@@ -350,9 +333,9 @@ button {
 /* Recent Reviews */
 .resenas-recientes {
     display: flex;
+    flex-direction: column;
     overflow-y: scroll;
     height: 100%;
-
 }
 
 .resena {
@@ -364,35 +347,19 @@ button {
     padding: 15px;
     width: 93%;
     flex: 1;
-    margin-top: 20px;
     margin-bottom: 15px;
 }
 
 .titulo-resena {
-    display: grid;
-    grid-template-columns: 50% 50%;
     grid-column-start: 1;
     grid-column-end: 4;
     font-size: 16px;
     font-weight: bold;
+    margin-bottom: 10px;
     width: 100%;
 }
 
-.tipo, .nombre, .titulo{
-    grid-column-start: 1;
-    grid-column-end: 2;
-    color: #222;
-}
-
-.fecha{
-
-    grid-column-start: 2;
-    grid-column-end: 3;
-    color: #222;
-}
-
 .texto-resena {
-    margin-top: 90px;
     padding-right: 15px;
     margin-right: 15px;
     margin-left: 10px;
@@ -400,24 +367,10 @@ button {
     word-wrap: break-word;
     overflow-wrap: break-word;
     white-space: normal;
-    overflow-y: auto;
-
-}
-
-.texto-resena2{
-    margin-top: 110px;
-    padding-right: 15px;
-    margin-right: 15px;
-    margin-left: 10px;
-    text-align: justify;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-    white-space: normal;
-    overflow-y: auto;
+    overflow-y: scroll;
 }
 
 .imagen-resena {
-
     grid-column-start: 2;
     grid-column-end: 4;
     flex: 3;
@@ -425,49 +378,9 @@ button {
     font-size: 12px;
     color: #555;
     width: 100px;
+    height: 150px;
     border-radius: 10px;
     margin-left: 6px;
     overflow: hidden;
     border-radius: 15px;
-    margin-top: 120px;
-}
-
-.comentar{
-    width: 120px;
-    height: 40px;
-    margin-top: 70px;
-    border-radius: 20pc;
-    background-color: goldenrod;
-    color: #222;
-    font-weight: 700;
-}
-
-.comentar:hover{
-
-    background-color: rgb(184, 43, 43);
-    color: #ffffff;
-}
-
-.comentar2{
-
-    margin-top: 600px;
-    width: 120px;
-    height: 40px;
-    margin-top: 70px;
-    border-radius: 20pc;
-    background-color: goldenrod;
-    color: #222;
-    font-weight: 700;
-}
-
-.comentar2:hover{
-
-    background-color: rgb(184, 43, 43);
-    color: #ffffff;
-}
-
-.id{
-    background-color: rgb(214, 212, 212);
-    border: none;
-    color: rgb(214, 212, 212);
 }
