--- a/Episodicos_Precentacion/src/main/webapp/UserProfile/Style.css
+++ b/Episodicos_Precentacion/src/main/webapp/UserProfile/Style.css
@@ -15,7 +15,7 @@ body {
 .Feed {
     display: grid;
     grid-template-columns: 70% 30%;
-    grid-template-rows: 100px 400px 48px 300px 60px 340px;
+    grid-template-rows: 100px 250px 48px 210px 48px 300px 60px 300px;
     background-color: #222;
     margin: 0px 50vh;
     overflow: hidden;
@@ -146,6 +146,139 @@ button{
     color: #00c6ff;
     fill-rule: evenodd;
 }
+
+.seccion,
+.resenas-recientes {
+
+    padding: 20px;
+    border-radius: 10px;
+    white-space: nowrap;
+    box-shadow: inset 0 0 20px #ffffff42;
+}
+
+.seccion {
+
+    display: flex;
+    overflow-x: scroll;
+}
+
+.resenas-recientes {
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    height: 230px;
+}
+
+
+h2 {
+    color: white;
+    margin-bottom: 10px;
+}
+/* scroll a un lado */
+.contenedor-series {
+    display: flex;
+    gap: 10px;
+}
+
+.serie {
+    background-color: #f0f0f0;
+    width: 100px;
+    height: 150px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.serie .info {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-size: 14px;
+    color: rgb(255, 255, 255);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    z-index: 2;
+}
+
+.serie-img {
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: filter 0.3s ease;
+}
+
+
+.serie:hover .serie-img {
+    filter: blur(3px);
+}
+
+.serie:hover .info {
+    opacity: 1;
+}
+
+/* scroll hacia a un lado*/
+.resena {
+
+    display: grid;
+    grid-template-columns: 80% 10% 10%;
+    grid-template-rows: 20% 80%;
+    background-color: rgb(214, 212, 212);
+    border-radius: 10px;
+    padding: 15px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    width: 95%;
+    flex: 1;
+    margin-bottom: 15px;
+}
+
+
+.titulo-resena {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    width: 100%;
+}
+
+
+.texto-resena {
+    padding-right: 15px;
+    margin-right: 15px;
+    margin-left: 10px;
+    text-align: justify;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+    overflow-y: scroll;
+
+}
+
+
+.imagen-resena {
+
+    grid-column-start: 2;
+    grid-column-end: 4;
+    flex: 3;
+    display: flex;
+    font-size: 12px;
+    color: #555;
+    width: 100px;
+    height: 150px;
+    border-radius: 10px;
+    margin-left: 6px;
+    overflow: hidden;
+    border-radius: 15px;
+}
+
+
 /* perfil */
 .perfil {
     padding: 20px;
@@ -159,17 +292,14 @@ button{
 }
 
 .NombrePerfil {
-    grid-column-start: 2;
     margin-bottom: 20px;
     color: #ffffff;
     padding-bottom: 15px;
 }
 
 .foto-perfil {
-    grid-column-start: 1;
-    grid-column-end: 2;
     grid-row-start: 1;
-    grid-row-end: 2;
+    grid-row-end: 3;
     width: 100px;
     height: 100px;
     background-color: #222;
@@ -178,13 +308,17 @@ button{
 }
 
 .serie-img-perfil {
-    width: 150px;
-    height: 250px;
+    width: 100px;
+    height: 100px;
     object-fit: cover;
     transition: filter 0.3s ease;
-    border-radius: 10%;
+    border-radius: 50%;
     background-color: #222;
     
+}
+
+.serie-img-perfil:hover {
+    filter: blur(3px);
 }
 
 .descripcion {
@@ -194,11 +328,11 @@ button{
     overflow-wrap: break-word;
     white-space: normal;
     overflow-y: scroll;
-    grid-column-start: 2;
 }
 
 /* secciones */
 .seccion {
+
     margin: 0;
     margin-top: 0px;
     padding: 20px;
@@ -208,11 +342,6 @@ button{
     grid-column-end: 3;
     display: flex;
     overflow-x: scroll;
-}
-
-h2 {
-    color: white;
-    margin-bottom: 10px;
 }
 
 .contenedor-series {
@@ -247,6 +376,7 @@ h2 {
 }
 
 .serie-img {
+
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -261,10 +391,11 @@ h2 {
     opacity: 1;
 }
 
-/* reseña */
+/*Escribir una reseña*/
 .nueva-resena {
-    grid-row-start: 4;
-    grid-row-end: 5;
+    grid-row-start: 6;
+    grid-row-end: 7;
+
 }
 
 .form {
@@ -305,10 +436,6 @@ h2 {
     border: 1px solid #8c00ff;
 }
 
-button {
-    border: none;
-}
-
 .form button {
     align-self: flex-end;
     padding: 8px;
@@ -322,19 +449,22 @@ button {
     cursor: pointer;
 }
 
+.aceptar:hover {
+    background: #8c00ff;
+}
 
-/* favoritas */
+/*peliculas favoritas*/
 .favoritas {
-    grid-row-start: 4;
+    grid-row-start: 6;
     grid-row-end: 9;
     margin: 0;
     padding: 45px;
     border-radius: 10px;
-    white-space: normal; 
+    white-space: normal;
     display: flex;
-    flex-direction: column; 
-    overflow-y: scroll; 
-    gap: 10px; 
+    flex-direction: column;
+    overflow-y: scroll;
+    gap: 10px;
 }
 
 .contenedor-series-fav {
@@ -347,16 +477,16 @@ button {
     text-align: center;
 }
 
-
+/*reseñas recientes*/
 .resenas-recientes {
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
     height: 100%;
-
 }
 
 .resena {
+
     display: grid;
     grid-template-columns: 70% 15% 15%;
     grid-template-rows: 10% 90%;
@@ -365,35 +495,20 @@ button {
     padding: 15px;
     width: 93%;
     flex: 1;
-    margin-top: 20px;
     margin-bottom: 15px;
 }
 
 .titulo-resena {
-    display: grid;
-    grid-template-columns: 50% 50%;
     grid-column-start: 1;
     grid-column-end: 4;
     font-size: 16px;
     font-weight: bold;
+    margin-bottom: 10px;
     width: 100%;
 }
 
-.tipo, .nombre, .titulo{
-    grid-column-start: 1;
-    grid-column-end: 2;
-    color: #222;
-}
-
-.fecha{
-
-    grid-column-start: 2;
-    grid-column-end: 3;
-    color: #222;
-}
 
 .texto-resena {
-    margin-top: 90px;
     padding-right: 15px;
     margin-right: 15px;
     margin-left: 10px;
@@ -401,20 +516,8 @@ button {
     word-wrap: break-word;
     overflow-wrap: break-word;
     white-space: normal;
-    overflow-y: auto;
+    overflow-y: scroll;
 
-}
-
-.texto-resena2{
-    margin-top: 110px;
-    padding-right: 15px;
-    margin-right: 15px;
-    margin-left: 10px;
-    text-align: justify;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-    white-space: normal;
-    overflow-y: auto;
 }
 
 .imagen-resena {
@@ -426,113 +529,9 @@ button {
     font-size: 12px;
     color: #555;
     width: 100px;
+    height: 150px;
     border-radius: 10px;
     margin-left: 6px;
     overflow: hidden;
     border-radius: 15px;
-    margin-top: 120px;
 }
-
-.comentar2{
-    grid-column-start: 3;
-    width: 120px;
-    height: 40px;
-    border-radius: 20pc;
-    background-color: goldenrod;
-    color: #222;
-    font-weight: 700;
-}
-
-.comentar2:hover{
-
-    background-color: rgb(184, 43, 43);
-    color: #ffffff;
-}
-
-.id{
-    background-color: rgb(214, 212, 212);
-    border: none;
-    color: rgb(214, 212, 212);
-}
-
-/*boton de megusta*/
-.meGusta {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 22px 20px 22px;
-    box-shadow: rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-    background-color: #222;
-    border-color: #222;
-    border-style: solid;
-    border-width: 9px;
-    border-radius: 35px;
-    transition: transform 400ms cubic-bezier(.68,-0.55,.27,2.5), 
-    border-color 400ms ease-in-out,
-    background-color 400ms ease-in-out;
-    word-spacing: -2px;
-    margin-top: 30px;
-    margin-left: 30px;
-  }
-  
-  @keyframes movingBorders {
-    0% {
-      border-color: #202020;
-    }
-  
-    50% {
-      border-color: #181818;
-    }
-  
-    90% {
-      border-color: #16161618;
-    }
-  }
-  
-  .meGusta:hover {
-    background-color: #33a8c9;
-    transform: scale(105%);
-    animation: movingBorders 3s infinite;
-  }
-  
-  .filled,
-  .empty {
-    fill: rgb(255, 110, 110);
-    transition: opacity 100ms ease-in-out;
-  }
-  
-  .filled {
-    position: absolute;
-    opacity: 0;
-  }
-  
-  @keyframes beatingHeart {
-    0% {
-      transform: scale(1);
-    }
-  
-    15% {
-      transform: scale(1.15);
-    }
-  
-    30% {
-      transform: scale(1);
-    }
-  
-    45% {
-      transform: scale(1.15);
-    }
-  
-    60% {
-      transform: scale(1);
-    }
-  }
-  
-  .meGusta:hover .empty {
-    opacity: 0;
-  }
-  
-  .meGusta:hover .filled {
-    opacity: 1;
-    animation: beatingHeart 1.2s infinite;
-  }
